// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcModal > displays input 1`] = `
"<div class="oc-modal-background fixed left-0 top-0 z-[var(--z-index-modal)] bg-black/40 flex items-center justify-center flex-row flex-wrap size-full">
  <focus-trap-stub tabbableoptions="[object Object]" active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal bg-role-surface z-[calc(var(--z-index-modal)+1)] rounded-xl focus:outline-0 w-full max-w-xl max-h-[90vh] overflow-auto shadow-2xl" tabindex="0" role="dialog" aria-modal="true" aria-labelledby="oc-modal-title">
      <div class="oc-modal-title flex items-center flex-row justify-between py-3 px-4 rounded-t-xl">
        <h2 id="oc-modal-title" class="truncate m-0 text-base">Create new folder</h2>
        <div class="flex items-center gap-1">
          <oc-button-stub arialabel="Cancel" appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-title-actions-cancel">
            <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="medium" type="span"></oc-icon-stub>
          </oc-button-stub>
        </div>
      </div>
      <div class="oc-modal-body px-4 pt-4">
        <!--v-if-->
        <!--v-if-->
        <oc-text-input-stub label="Folder name" id="oc-textinput-1" type="text" modelvalue="New folder" clearbuttonenabled="false" clearbuttonaccessiblelabel="" disabled="false" inlinelabel="false" errormessagedebouncedtime="500" fixmessageline="true" readonly="false" requiredmark="false" passwordpolicy="[object Object]" hasborder="true" class="oc-modal-body-input -mb-5 pb-4"></oc-text-input-stub>
      </div>
      <div class="oc-modal-body-actions flex justify-end p-4 text-right">
        <div class="oc-modal-body-actions-grid grid grid-flow-col auto-cols-1fr">
          <oc-button-stub appearance="filled" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-body-actions-confirm ml-2">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > displays loading state 1`] = `
"<div class="oc-modal-background fixed left-0 top-0 z-[var(--z-index-modal)] bg-black/40 flex items-center justify-center flex-row flex-wrap size-full">
  <focus-trap-stub tabbableoptions="[object Object]" active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal bg-role-surface z-[calc(var(--z-index-modal)+1)] rounded-xl focus:outline-0 w-full max-w-xl max-h-[90vh] overflow-auto shadow-2xl" tabindex="0" role="dialog" aria-modal="true" aria-labelledby="oc-modal-title">
      <div class="oc-modal-title flex items-center flex-row justify-between py-3 px-4 rounded-t-xl">
        <h2 id="oc-modal-title" class="truncate m-0 text-base">Example title</h2>
        <div class="flex items-center gap-1"> <button type="button" disabled="" aria-label="Cancel" class="oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 justify-center text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default oc-modal-title-actions-cancel">
            <!--v-if-->
            <!-- @slot Content of the button --> <span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-5"><svg data-testid="inline-svg-stub" src="icons/close-fill.svg" transform-source="(svg) => {
			if (__props.accessibleLabel !== &quot;&quot;) {
				const title = document.createElement(&quot;title&quot;);
				title.setAttribute(&quot;id&quot;, svgTitleId.value);
				title.appendChild(document.createTextNode(__props.accessibleLabel));
				svg.insertBefore(title, svg.firstChild);
			};
			return svg;
		}" aria-hidden="true" focusable="false" class="size-5"></svg></span>
          </button></div>
      </div>
      <div class="oc-modal-body px-4 pt-4">
        <p class="oc-modal-body-message mt-0 mb-0">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions flex justify-end p-4 text-right">
        <div class="oc-modal-body-actions-grid grid grid-flow-col auto-cols-1fr"><button type="button" disabled="" class="oc-button-secondary oc-button-outline oc-button-secondary-outline gap-2 justify-center text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default oc-modal-body-actions-confirm ml-2"><span class="oc-spinner inline-block after:block after:bg-transparent after:border after:border-current after:rounded-full after:size-full relative after:relative animate-spin after:content-[''] after:border-b-transparent size-4 spinner" aria-hidden="true" tabindex="-1"></span> <!-- @slot Content of the button --> Confirm</button></div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > matches snapshot 1`] = `
"<div class="oc-modal-background fixed left-0 top-0 z-[var(--z-index-modal)] bg-black/40 flex items-center justify-center flex-row flex-wrap size-full">
  <focus-trap-stub tabbableoptions="[object Object]" active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal bg-role-surface z-[calc(var(--z-index-modal)+1)] rounded-xl focus:outline-0 w-full max-w-xl max-h-[90vh] overflow-auto shadow-2xl" tabindex="0" role="dialog" aria-modal="true" aria-labelledby="oc-modal-title">
      <div class="oc-modal-title flex items-center flex-row justify-between py-3 px-4 rounded-t-xl">
        <h2 id="oc-modal-title" class="truncate m-0 text-base">Example title</h2>
        <div class="flex items-center gap-1">
          <oc-button-stub arialabel="Cancel" appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-title-actions-cancel">
            <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="medium" type="span"></oc-icon-stub>
          </oc-button-stub>
        </div>
      </div>
      <div class="oc-modal-body px-4 pt-4">
        <p class="oc-modal-body-message mt-0 mb-0">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions flex justify-end p-4 text-right">
        <div class="oc-modal-body-actions-grid grid grid-flow-col auto-cols-1fr">
          <oc-button-stub appearance="filled" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-body-actions-confirm ml-2">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > overrides props message with slot 1`] = `
"<div class="oc-modal-background fixed left-0 top-0 z-[var(--z-index-modal)] bg-black/40 flex items-center justify-center flex-row flex-wrap size-full">
  <focus-trap-stub tabbableoptions="[object Object]" active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal bg-role-surface z-[calc(var(--z-index-modal)+1)] rounded-xl focus:outline-0 w-full max-w-xl max-h-[90vh] overflow-auto shadow-2xl" tabindex="0" role="dialog" aria-modal="true" aria-labelledby="oc-modal-title">
      <div class="oc-modal-title flex items-center flex-row justify-between py-3 px-4 rounded-t-xl">
        <h2 id="oc-modal-title" class="truncate m-0 text-base">Example title</h2>
        <div class="flex items-center gap-1">
          <oc-button-stub arialabel="Cancel" appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-title-actions-cancel">
            <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="medium" type="span"></oc-icon-stub>
          </oc-button-stub>
        </div>
      </div>
      <div class="oc-modal-body px-4 pt-4">
        <div class="oc-modal-body-message mt-2 mb-4">
          <p>Slot message</p>
        </div>
      </div>
      <div class="oc-modal-body-actions flex justify-end p-4 text-right">
        <div class="oc-modal-body-actions-grid grid grid-flow-col auto-cols-1fr">
          <oc-button-stub appearance="filled" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-modal-body-actions-confirm ml-2">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;
